--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,5 +2,15 @@
 
 .chatbox {
   height: 450px;
+}
 
+#messages {
+  overflow: auto;
+  height: 15em ;
+}
+
+.input {
+  button {
+    display: none;
+  }
 }
