--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
       <title>MessageMe</title>
-      <%= favicon_link_tag %>
+      <%= favicon_link_tag %> 
       <%= csrf_meta_tags %>
       <%= csp_meta_tag %>
 
@@ -16,6 +16,7 @@
     </div>
   </div>
   <div class="ui container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
   </body>
